@@ -227,7 +227,8 @@ namespace MonoDevelop.Prj2Make
 					writer.WriteLine (@"Project(""{{{0}}}"") = ""{1}"", ""{2}"", ""{{{3}}}""",
 						ProjectTypeGuids [project.LanguageName],
 						project.Name, 
-						Runtime.FileService.AbsoluteToRelativePath (baseDirectory, project.FileName),
+						MSBuildFileFormat.NormalizeRelativePath (Runtime.FileService.AbsoluteToRelativePath (
+							baseDirectory, project.FileName)),
 						msbData.Guid);
 				} else {
 					//Solution
