@@ -1,3 +1,9 @@
+2007-05-24  Ankit Jain  <jankit@novell.com>
+
+	* SlnFileFormat.cs: Remove "./" prefixes from paths before emitting.
+	* MSBuildFileFormat.cs: Likewise.
+	(NormalizeRelativePath): New. Taken from AutotoolsContext.cs .
+
 2007-05-22  Ankit Jain  <jankit@novell.com>
 
 	* MsPrjHelper.cs (CreatePrjxFromCsproj): Rethrow the exception.
